Fix issue with z-index of music player

--- a/app/assets/stylesheets/music_player/music_player.scss
+++ b/app/assets/stylesheets/music_player/music_player.scss
@@ -128,6 +128,7 @@
   bottom: 0;
   display: flex;
   justify-content: center;
+  z-index: 9999;
 }
 
 .music-player {
